webroot/css/voms_members.css
#voms_members_list {
  clear: both;
}
#voms_members_list > .co-person {
  margin: 0;
  padding: 0;
  border-bottom: 2px solid #fff;
  clear: both;
}
#voms_members_list > div > .person-panel {
  box-sizing: border-box; /* essential */
  margin: 0;
  min-height: 45px;
  position: relative;
  width: 100%;
}
#voms_members_list .ui-accordion .ui-accordion-header .ui-accordion-header-icon {
  /* override jquery default icon positioning */
  float: left;
  margin: 0 0.5em 0 0;
  top: 6px;
}
#voms_members_list .ui-accordion .ui-accordion-content {
  padding: 0;
}
#voms_members_list .person-info {
  float: left;
  margin-top: 6px;
  margin-bottom: 0.5em;
  width:70%;
}
#voms_members_list .person-info-inner {
  width: inherit;
}
#voms_members_list .person-name {
}
#voms_members_list .nameWithoutEmail {
}
#voms_members_list .person-email {
  color: #666;
}
#voms_members_list .person-status {
  font-style: italic;
  background: #186696;
  padding: 0.3em;
  border-radius: 0.5em;
  color: white;
  float: right;
}
#voms_members_list .person-admin {
  float: right;
  text-align: right;
  margin-top: 0.3em;
}
#voms_members_list .person-admin button {
  display: block;
}
#voms_members_list .role-panel {
  margin-left: 25px;
  clear: both;
  position: relative;
  overflow: visible;
}
#voms_members_list .roles-title {
  position: absolute;
  bottom: 10px;
  transform: rotate(-90deg);
  z-index: 1;
  left: -29px;
  font-size: 0.9em;
  color: #bbb;
  text-transform: lowercase;
}
#voms_members_list .role {
  padding: 2px 4px;
}
#voms_members_list .role:first-child {
  padding-top: 4px;
}
#voms_members_list .role:last-child {
  padding-bottom: 4px;
}
#voms_members_list .role:nth-child(even) {
  background-color: #f5f5f5;
}
#voms_members_list .roleinfo {
  grid-area: roleinfo;
  height: 100%;
  margin: 4px 0;
}
#voms_members_list .rolestatus {
  grid-area: rolestatus;
  height: 100%;
  margin: 0;
  background-color: inherit;
  color: initial;
  padding: 4px;
}
#voms_members_list .rolestatus .found::after{
  content: '';
  display: inline-block;
  width: 15px;
  height: 15px;
  -moz-border-radius: 7.5px;
  -webkit-border-radius: 7.5px;
  border-radius: 7.5px;
  background-color: #69b6d5;
  margin-left: 0.5em;
  padding-top: 0;
  vertical-align: middle;
}
#voms_members_list .rolestatus a {
  color: #07b;
}
#voms_members_list .roledata {
  width: 100%;
}
#voms_members_list .roletitle {
  width:100%;
}
#voms_members_list .roleTitleLinks {
  margin: 0 4px 0;
  float: left;
}
#voms_members_list .roledates {
  text-align: right;
  margin: 0 30px 0 0;
}
/* people index jquery ui overrides */
#voms_members_list .person-panel {
  border: 1px solid transparent; /* to allow our jquery UI hovers not to change the size of the div */
  background: inherit;
  color: #333;
}



#voms-name-header{
  background: #186696;
  padding-left: 0.5em;
  font-size: 1.8em;
  line-height: 2.2em;
  color: white;
  font-weight: bolder;
  /*border-bottom: 0.5em solid #186696;*/
}
.listControl a {
  background: unset;
  border: unset;
}
.listControl a:hover {
  background: unset;
  border: unset;
  color: #333;
}
.filter-textbox {
  position: relative;
  margin-right: 1em;
}
.filter-textbox label {
  position: absolute;
  top: 0.15em;
}
.filter-textbox label#filter-icon {
  left: 0.5em;
}
.filter-textbox label#x-icon {
  right: 0.4em;
}
.filter-textbox input {
  padding-left: 1.2em;
  border-radius: 0.5em;
}
.filter-textbox .fa::before {
  color: #555;
}
.filter-textbox.hidden {
  visibility: hidden;
}
mark {
  background: #f5f5bb;
}

@media only screen and (min-width: 360px) {
  #voms_members_list .person-admin {
    float: left;
    clear: both;
  }
}

@media only screen and (min-width: 576px) {
  #voms_members_list .person-admin {
    float: right;
    clear: unset;
  }
  #voms_members_list .role {
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    grid-template-rows: unset;
    grid-template-areas:
      "roleinfo roleinfo roleinfo roleinfo roleinfo roleinfo roleinfo roleinfo rolestatus rolestatus rolestatus"
  }
}

